devqa/services/ollama/searxng/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: searxng
  namespace: open-webui
spec:
  hosts:
  - "searxng.internal.magiccityit.com"
  gateways:
  - istio-ingress/internal-magiccityit-gateway
  - mesh
  http:
  - route:
    - destination:
        host: searxng
        port:
          number: 8080
